# DeathStarBench

./: .gitignore
hotelReservation/: Dockerfile  README.md  config.json  go.mod  go.sum
hotelReservation/common/: consistent_hash.go  consts.go  memc_binding.go  memc_binding2.go  monitor.go  param_client.go  param_client_test.go  starter.go  sysctl.go  utils.go
hotelReservation/dialer/: dialer.go
hotelReservation/helm/: values.yaml
hotelReservation/istio/: gateway.yaml  vs.yaml
hotelReservation/kubernetes/: consul-deployment.yaml  consul-service.yaml  frontend-deployment.yaml  frontend-service.yaml  geo-deployment.yaml  geo-persistent-volume.yaml  geo-pvc.yaml  geo-service.yaml  jaeger-deployment.yaml  jaeger-service.yaml  memcached-profile-deployment.yaml  memcached-profile-service.yaml  memcached-rate-deployment.yaml  memcached-rate-service.yaml  memcached-reservation-deployment.yaml  memcached-reservation-service.yaml  mongodb-geo-deployment.yaml  mongodb-geo-service.yaml  mongodb-profile-deployment.yaml  mongodb-profile-service.yaml  mongodb-rate-deployment.yaml  mongodb-rate-service.yaml  mongodb-rbac.yaml  mongodb-recommendation-deployment.yaml  mongodb-recommendation-service.yaml  mongodb-reservation-deployment.yaml  mongodb-reservation-service.yaml  mongodb-user-deployment.yaml  mongodb-user-service.yaml  profile-deployment.yaml  profile-persistent-volume.yaml  profile-pvc.yaml  profile-service.yaml  prom-push-gateway-service.yaml  prom-push-gateway.yaml  rate-deployment.yaml  rate-persistent-volume.yaml  rate-pvc.yaml  rate-service.yaml  rbac.yaml  (+15 more)
hotelReservation/monitor/: monitor.go
hotelReservation/openshift/: memcached-profile-deployment.yaml  memcached-rate-deployment.yaml  (+1 more)
socialNetwork/: CMakeLists.txt  Dockerfile  Dockerfile.dev  Dockerfile2.dev  skaffold.yaml  social_network.proto  step.py  test.cc  test.txt
socialNetwork/src/ComposePostService/: CMakeLists.txt  ComposePostHandler.h  ComposePostService.cpp
socialNetwork/src/TextService/: CMakeLists.txt  TextHandler.h  TextService.cpp
(+192 files in other folders)
